# LEGO

./: CMakeLists.txt  README.md  config.h.in
cmake_modules/: Config.cmake.in
lego/: CMakeLists.txt
lego/base/: CMakeLists.txt  base_edge.h  base_vertex.cpp  base_vertex.h  problem.cpp  problem.h
lego/examples/: CMakeLists.txt
lego/examples/nonlinear_fitting/: example_nonlinear_fitting.cpp
lego/examples/pose_graph/: example_pose_graph.cpp  example_pose_graph_SE3.cpp  example_pose_graph_lie_algebra.cpp
lego/slam/: CMakeLists.txt  edge_imu.cpp  edge_imu.h  edge_prior.cpp  edge_prior.h  edge_reprojection.cpp  edge_reprojection.h  imu_integration.cpp  imu_integration.h  vertex_inverse_depth.h  vertex_point_xyz.h  vertex_pose.cpp  vertex_pose.h  vertex_speedbias.h
